# head-tail-rs-cli-utility

./: Cargo.toml  README.md
src/: head.main.rs  main.rs  tail.main.rs
src/cli/: cli.rs
src/utilities/: head.rs  mod.rs  tail.rs
src/utilities/traits/: execute.rs
