[package]
name = "head-tail-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "head"
path = "./src/head.main.rs"

[[bin]]
name = "tail"
path = "./src/tail.main.rs"

[dependencies]
anyhow = '1.0.75'
clap = { version = "4.3.23", features = ["derive"] }
